--- a/CSS.Basic/Exercise/imageStyle/Image.css
+++ b/CSS.Basic/Exercise/imageStyle/Image.css
@@ -13,15 +13,11 @@ body{
 .main img{
     width: 300px; 
     height: 300px; 
+   
     position: absolute;
     left: 160px;
     top: 150px;
     transition: transform .2s;
-    
-    /* background-image: url("/photo.jpg");
-    background-size: 100%;
-    border-radius: 0px 50px 50px 50px;
-    background-position: center; */
     
      border: 4px solid;
     background-image: url("photo.jpg");
@@ -32,13 +28,29 @@ body{
 }
 .image:hover {
     -ms-transform: scale(1.5); /* IE 9 */
-    -webkit-transform: scale(1.5); /* Safari 3-8 */
-    transform: scale(1.5); 
+    -webkit-transform: scale(1.5); Safari 3-8
+    /* /*transform: scale(1.5);  */
 }
 @keyframes animation{
     0%{
         width: 200px;
         height: 200px;
-    }
+    } 
 
+}
+.image div{
+    
+    width: 50px;
+    height: 20px;
+    background-color: white;
+    margin: 20px;
+    padding: 3px 10px;
+    border-radius: 1px;
+    display: inline;
+}
+.image div:hover{
+    color: blue;
+}
+.image div:active{
+    border-style: inset;
 }
