--- a/CSS.Basic/LoginPage/Login.css
+++ b/CSS.Basic/LoginPage/Login.css
@@ -1,6 +1,9 @@
 body{
-    background: url("/CSS.Basic/LoginPage/images\ \(1\).jpg");
-    font-family: 'Times New Roman', Times, serif
+    background-image: url("/fingerprint-identity-sensor-data-protection-system-podium-hologram-blue-light-and-concept-free-vector.jpg");
+    background-position: top center;
+    background-size: 90%;
+    font-family: 'Times New Roman', Times, serif;
+    
 }
 .regform{
     width: 500px;
@@ -12,7 +15,6 @@ body{
 }
 
 .regform h2{
-    /* text-align: center; */
     color: #E29578;
     margin-left: 200px;
     
@@ -31,9 +33,13 @@ body{
     margin-left: 9em;
 }
 .regform .btn{
-    padding-left: 10em;
+    position: relative;
+    left: 200px;
 }
-
+/* .bi bi-eye-slash {
+    margin-left: -30px;
+    cursor: pointer;
+} */
 
 
 
